feat: iterative improvements from self-review
- Cancel endpoint fix: don't use stale "new" key, scan by prefix
- Always pass --model to CLI (prevents unsupported default model)
- Merge proxy & config model lists (only show models in both)
- Chat validation: reject empty prompt with 400
- Cancel button in UI while streaming
- Clear chat button in header
- Settings save keeps local state in sync
- Empty prompt server-side validation with @Valid

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>